[package]
name = "timestone_tsx_parser"
version = "0.1.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
description.workspace = true

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
